# spark

./: Cargo.toml  README.md
crates/spark-common/: Cargo.toml
crates/spark-core/: Cargo.toml
crates/spark-core/src/: lib.rs  world.rs
examples/: demo.rs
