[workspace]
resolver = "3"
members = ["crates/*", "."]

[workspace.package]
edition = "2024"

[workspace.dependencies]
spark-core = { version = "0.1.0", path = "crates/spark-core" }
thiserror = "2.0.18"
tracing = "0.1.44"

[package]
name = "spark"
version = "0.1.0"
edition.workspace = true
description = """
Real-time physics engine written in Rust, designed for performance and ease of use.
"""

[dependencies]
spark-core.workspace = true

[dev-dependencies]
anyhow = "1.0.88"
